<resources>
    <string name="app_name">Gordisky App</string>
    <!--Login Activity-->
    <!--Field text-->
    <string name="input_user">Usuario</string>
    <string name="input_password">Contraseña</string>
    <string name="login_btn">Iniciar Sesión</string>


    <!--General Text-->
    <string name="logout">Cerrar Sesíon</string>
    <string name="map_config">Configuracion de mapa</string>
    <string name="dialog_default_positive">Si</string>
    <string name="dialog_default_negative">No</string>
    <string name="dialog_default_close">Cerrar</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="cancel">Cancelar</string>
    <string name="close">Cerrar</string>
    <string name="any">Ninguno</string>
    <string name="reject">Rechazar</string>
    <string name="start">Empezar</string>
    <string name="start_without_code">Empezar sin codigo de verificacion</string>
    <string name="percentage">%1$d %%</string>
    <string name="completed">Completado</string>
    <string name="downloading">Descargando…</string>
    <string name="downloaded">Descargado</string>

    <!--Errors-->
    <string name="error_no_permission">Operacíon fallida por falta de permisos</string>
    <string name="error_blank"> El campo %1$s no puede estar en blanco </string>
    <string name="error_numeric"> El campo %1$s solo puede contener numeros </string>
    <string name="error_letters"> El campo %1$s solo puede contener letras </string>
    <string name="error_length"> El campo %1$s debe ser de longitud %2$s </string>
    <string name="error_user_type"> Este usuario no puede usar esta aplicación </string>
    <string name="error_user_saved"> No se pudo guardar la información del usuario en el dispositivo, intente otra vez, si el error persiste comuniquese con soporte técnico </string>
    <string name="error_user_null"> Informacion de usuario nula, no se puede proceder, intente otra vez, si el error persiste comuniquese con soporte técnico </string>
    <string name="error_token_save"> Error guardado información de sesión, intente otra vez, si el error persiste comuniquese con soporte técnico </string>
    <string name="error_user"> Error en el inicio de sesión, intente otra vez, si el error persiste comuniquese con soporte técnico </string>
    <string name="error_request_general"> Error al realizar esta acción, intente otra vez, si el error persiste comuniquese con soporte técnico </string>
    <string name="error_fingerprint_not_found">Este usuario no tiene una huella registrada, por favor registre su huella primero y vuelva a intentar</string>

    <string name="error_car_saved"> La configuracíon fue realizada exitosamente pero no se pudo guardar la información del vehículo en el dispositivo, comuniquese con soporte técnico </string>

    <string name="error_config_not_found">Este dispositivo no cuenta con una configuración previa, consulte con soporte técnico si este error es repentino</string>

    <string name="error_ride_variables_not_found">Este dispositivo no tiene la información necesaria para prestar el servicio, intente otra vez, si el error persiste comuniquese con soporte técnico</string>

    <string name="error_dialog_title"> Error </string>
    <string name="error_dialog_ok"> Entiendo </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="customers">Clientes</string>
    <string name="loans">Prestamos</string>
    <string name="config">Configuracion</string>
    <string name="settings">Configurar Variables</string>
    <string name="profile">Perfil</string>
    <string name="lbl_empty_list">No hay elementos en esta lista</string>
    <string name="lbld_personName"><b>Nombre:</b> %1$s</string>
    <string name="call">LLamar</string>
    <string name="lbld_personPhone"><b>Telefono:</b> %1$s </string>
    <string name="lbld_personAddress"><b>Direccion:</b> %1$s </string>
    <string name="input_personFirstNames">Nombres</string>
    <string name="input_personLastNames">Apellidos</string>
    <string name="input_personIdentification">Cedula</string>
    <string name="input_personPhone">Telefono/Celular</string>
    <string name="input_personAddress">Direccion</string>
    <string name="save">Guardar</string>
    <string name="search">Buscar</string>
    <string name="input_personFullName">Nombre</string>
    <string name="input_loanDebt">Total Deuda</string>
    <string name="input_loanPaid">Total Pagado</string>
    <string name="input_loanLastPaid">Ultimo Pago</string>
    <string name="input_loanNextPaid">Siguiente Pago</string>
    <string name="input_loanFees">Total Cuotas</string>
    <string name="input_loanFeesFulfilled">Cuotas Pagadas</string>
    <string name="input_loanAmount">Monto Solicitado</string>
    <string name="input_loanInterest">Interes</string>
    <string name="input_loanExpiredPayments">Cuotas Vencidas</string>
    <string name="input_loanFrequency">Frecuencia</string>
    <string name="detail_btn">Ver Detalle</string>
    <string name="lbl_fees">Cuotas</string>
    <string name="lbl_see_fees">Ver Cuotas</string>
    <string name="input_paymentNumber">Cuota Numero</string>
    <string name="input_paymentState">Estado</string>
    <string name="input_paymentValue">Valor</string>
    <string name="input_paymentPaidValue">Valor Pagado</string>
    <string name="input_paymentDate">Fecha De Pago</string>
    <string name="input_paymentPaidAt">Pagado El</string>
    <string name="input_loanFeesDays">Dias</string>
    <string name="generate">Generar</string>
    <string name="input_loanFrequencyDays">Dias</string>
    <string name="ok">ok</string>
    <string name="lbl_set_payment">Ingresar Pago</string>
    <string name="input_quotationValue">Valor Cuota</string>
    <string name="input_amountToPay">Valor A Pagar</string>
    <string name="resume">Resumen</string>
    <string name="transactions">Transacciones</string>
    <string name="input_totalInverted">Total Invertido</string>
    <string name="input_totalInvertedWithInterest">Total Invertido con intereses</string>
    <string name="input_totalAssets">Total Activos</string>
    <string name="input_totalLiabilities">Total Pasivos</string>
    <string name="input_totalGain">Total Ganancias</string>

    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic </string>
    <string name="calendar">Calendario</string>

    <string name="slycalendar_cancel">Cerrar</string>
    <string name="slycalendar_save">Guardar</string>
    <string name="slycalendar_next">Sig</string>
    <string name="slycalendar_prev">Prev</string>
    <string name="input_transactionValue">Valor</string>
    <string name="input_transactionDescription">Descripcion</string>
    <string name="input_paymentValue2">Valor Cuota</string>
    <string name="input_paymentAmount">Valor a pagar</string>
    <string name="pay">Pagar</string>
    <string name="input_totalProfit">Ganancia Neta</string>
</resources>
