<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navCustomer"
            android:icon="@drawable/ic_users"
            android:title="@string/customers" />
        <item
            android:id="@+id/navLoans"
            android:icon="@drawable/ic_bank"
            android:title="@string/loans" />
        <item
            android:id="@+id/navTransactions"
            android:icon="@drawable/ic_transactions"
            android:title="@string/transactions" />
        <item
            android:id="@+id/navResume"
            android:icon="@drawable/ic_chart"
            android:title="@string/resume" />
    </group>

    <item android:title="@string/config">
        <menu>
            <!--<item-->
                <!--android:id="@+id/navSettings"-->
                <!--android:icon="@drawable/ic_settings"-->
                <!--android:title="@string/settings" />-->
            <item
                android:id="@+id/navProfile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile" />
            <item
                android:id="@+id/navLogout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
