<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/personFullNameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:enabled="false"
            android:id="@+id/personFullNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_personFullName"
            style="@style/BaseEditText"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/personIdentificationTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personFullNameTextInputLayout">

        <EditText
            android:enabled="false"
            android:id="@+id/personIdentificationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_personIdentification"
            style="@style/BaseEditText"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loanAmountTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/personIdentificationTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        >

        <EditText
            android:enabled="false"
            android:id="@+id/loanAmountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_loanAmount"
            style="@style/BaseEditText"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loanInterestTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/personIdentificationTextInputLayout"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <EditText
            android:enabled="false"
            android:id="@+id/loanInterestEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_loanInterest"
            style="@style/BaseEditText"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loanDebtTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/loanAmountTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        >

        <EditText
            android:enabled="false"
            android:id="@+id/loanDebtEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_loanDebt"
            style="@style/BaseEditText"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loanPaidTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/loanAmountTextInputLayout"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <EditText
            android:enabled="false"
            android:id="@+id/loanPaidEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_loanPaid"
            style="@style/BaseEditText"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/loanFeesTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/loanPaidTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        >

        <EditText
            android:enabled="false"
            android:id="@+id/loanFeesEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_loanFees"
            style="@style/BaseEditText"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loanFeesFulfilledTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/loanDebtTextInputLayout"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <EditText
            android:enabled="false"
            android:id="@+id/loanFeesFulfilledEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_loanFeesFulfilled"
            style="@style/BaseEditText"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/loanExpiredPaymentsTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/loanFeesTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        >

        <EditText
            android:enabled="false"
            android:id="@+id/loanExpiredPaymentsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_loanExpiredPayments"
            style="@style/BaseEditText"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loanFrequencyTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/loanFeesTextInputLayout"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <EditText
            android:enabled="false"
            android:id="@+id/loanFrequencyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_loanFrequency"
            style="@style/BaseEditText"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/loanLastPaidTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/loanExpiredPaymentsTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        >

        <EditText
            android:enabled="false"
            android:id="@+id/loanLastPaidEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_loanLastPaid"
            style="@style/BaseEditText"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loanNextPaidTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/loanExpiredPaymentsTextInputLayout"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <EditText
            android:enabled="false"
            android:id="@+id/loanNextPaidEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_loanNextPaid"
            style="@style/BaseEditText"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/feesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_fees"
        android:textAlignment="center"
        android:padding="10dp"
        android:textStyle="bold"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@+id/loanNextPaidTextInputLayout"
        android:textSize="20sp"
        android:textAllCaps="true"
        />

    <Button
        android:id="@+id/feesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_see_fees"
        style="@style/PrimaryButton"
        android:theme="@style/PrimaryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableEnd="@drawable/ic_eye"
        app:layout_constraintTop_toBottomOf="@id/loanNextPaidTextInputLayout"
        />

    <Button
        android:id="@+id/paymentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_set_payment"
        style="@style/PrimaryButton"
        android:theme="@style/AccentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableEnd="@drawable/ic_payment"
        app:layout_constraintTop_toBottomOf="@id/feesButton"
        />

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/listRecyclerViewFragment"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/feesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
    </FrameLayout>

</android.support.constraint.ConstraintLayout>