<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    android:layout_marginBottom="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/personNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/lbld_personName"
            android:padding="8dp"
            />

        <TextView
            android:id="@+id/personPhoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/personNameTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/lbld_personPhone"
            android:padding="8dp"
            />

        <TextView
            android:id="@+id/personAddressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/personPhoneTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/lbld_personAddress"
            android:padding="8dp"
            />

        <Button
            android:id="@+id/callButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/personPhoneTextView"
            app:layout_constraintBottom_toBottomOf="@id/personPhoneTextView"
            android:text="@string/call"
            android:drawableStart="@drawable/ic_phone"
            android:theme="@style/PrimaryButton"
            />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
