<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <include layout="@layout/content_progressbar" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <android.support.constraint.ConstraintLayout
            android:id="@+id/fragmentLayout"
            android:padding="@dimen/activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/paymentValueTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <EditText
                    android:id="@+id/paymentValueEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_quotationValue"
                    style="@style/BaseEditText"
                    android:enabled="false"
                    />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/paymentAmountLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/paymentValueTextInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/input_amountToPay"
                android:text="@string/input_paymentAmount"
                style="@style/LabelTextView"

                />

            <com.andoresu.gordiskyapp.utils.CurrencyEditText
                android:id="@+id/paymentAmountEditText"
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/paymentAmountLabelTextView"
                android:layout_marginTop="11dp"
                />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>





</android.support.constraint.ConstraintLayout>